# apps/mine-stillinger-api/src/main/kotlin/no/naw/paw/minestillinger/api/vo/ApiTag.kt
@@ -3,10 +3,23 @@ package no.naw.paw.minestillinger.api.vo
 import no.naw.paw.ledigestillinger.model.Tag
 
 enum class ApiTag {
-    DIREKTEMELDT_V1
+    DIREKTEMELDT_V1,
+    HAR_KRAV_TIL_ARBEIDSERFARING_V1,
+    INGEN_KRAV_TIL_ARBEIDSERFARING_V1,
+    HAR_KRAV_TIL_UTDANNING_V1,
+    INGEN_KRAV_TIL_UTDANNING_V1,
+    HAR_KRAV_TIL_FOERERKORT_V1,
+    INGEN_KRAV_TIL_FOERERKORT_V1,
 }
 
 fun Tag.toApiTag(): ApiTag {
     return when (this) {
         Tag.DIREKTEMELDT_V1 -> ApiTag.DIREKTEMELDT_V1
-    }}
+        Tag.HAR_KRAV_TIL_ARBEIDSERFARING_V1 -> ApiTag.HAR_KRAV_TIL_ARBEIDSERFARING_V1
+        Tag.INGEN_KRAV_TIL_ARBEIDSERFARING_V1 -> ApiTag.INGEN_KRAV_TIL_ARBEIDSERFARING_V1
+        Tag.HAR_KRAV_TIL_UTDANNING_V1 -> ApiTag.HAR_KRAV_TIL_UTDANNING_V1
+        Tag.INGEN_KRAV_TIL_UTDANNING_V1 -> ApiTag.INGEN_KRAV_TIL_UTDANNING_V1
+        Tag.HAR_KRAV_TIL_FOERERKORT_V1 -> ApiTag.HAR_KRAV_TIL_FOERERKORT_V1
+        Tag.INGEN_KRAV_TIL_FOERERKORT_V1 -> ApiTag.INGEN_KRAV_TIL_FOERERKORT_V1
+    }
+}
